# pytexmd

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pytexmd.filter.rst  pytexmd.rst
eample_custom_theorems/source/: conf.py  index.md
examples/: document_loader.py  miniexample.py  misc.py  output_full_document.md
pytexmd/: __init__.py  antibugs.py  cli.py  config.py  core.py  drawtex.py  enumitem.py  equations.py  file_exporter.py  file_loader.py  sphinx_doc.py  structure.py
pytexmd/filter/: __init__.py  antibugs.py  core.py  drawtex.py  enumitem.py  equations.py  export.py  file_maker.py  misc.py  notworking_preprocessor.py  preprocessor.py  section.py  splitting.py  text.py
pytexmd/templates/: conf.txt
tests/: old_section.py
