[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytexmd"
version = "1.1"
description = "Translate LaTeX documents to Markdown/MyST and HTML, with CLI and Sphinx integration."
authors = [
    { name = "Martin Pflaum", email = "contact@martinpflaum.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sphinx",
    "myst-parser",
    "sphinx-proof",
    "furo",
    "regex"
]
[project.urls]
Homepage = "https://github.com/yourusername/pytexmd"
Repository = "https://github.com/yourusername/pytexmd"

[project.scripts]
pytexmd = "pytexmd.cli:main"
